Restore Swagger annotations and update docs
