# internal/handler/auth.go
@@ -22,6 +22,15 @@ type signUpInput struct {
 	Password string `json:"password" binding:"required,min=6"`
 }
 
+// @Summary Sign Up
+// @Description create account
+// @Tags auth
+// @ID create-account
+// @Accept json
+// @Produce json
+// @Param input body signUpInput true "account info"
+// @Success 200 {integer} integer 1
+// @Router /auth/sign-up [post]
 func (h *AuthHandler) signUp(c *gin.Context) {
 	var input signUpInput
 	if err := c.ShouldBindJSON(&input); err != nil {
@@ -50,6 +59,15 @@ type signInInput struct {
 	Password string `json:"password" binding:"required"`
 }
 
+// @Summary Sign In
+// @Description login
+// @Tags auth
+// @ID login
+// @Accept json
+// @Produce json
+// @Param input body signInInput true "credentials"
+// @Success 200 {string} string "token"
+// @Router /auth/sign-in [post]
 func (h *AuthHandler) signIn(c *gin.Context) {
 	var input signInInput
 	if err := c.ShouldBindJSON(&input); err != nil {
