# internal/handler/registration.go
@@ -17,6 +17,16 @@ func NewRegistrationHandler(useCase usecase.RegistrationUseCase) *RegistrationHa
 	return &RegistrationHandler{useCase: useCase}
 }
 
+// @Summary Register for Event
+// @Security ApiKeyAuth
+// @Description register user for an event
+// @Tags events
+// @ID register-event
+// @Produce json
+// @Param id path int true "Event ID"
+// @Success 200 {object} response.Response
+// @Failure 400,401 {object} response.Response
+// @Router /api/v1/events/{id}/register [post]
 func (h *RegistrationHandler) register(c *gin.Context) {
 	eventId, err := strconv.ParseInt(c.Param("id"), 10, 64)
 	if err != nil {
@@ -44,6 +54,16 @@ func (h *RegistrationHandler) register(c *gin.Context) {
 	c.JSON(http.StatusOK, response.OK())
 }
 
+// @Summary Cancel Event Registration
+// @Security ApiKeyAuth
+// @Description unregister user from an event
+// @Tags events
+// @ID cancel-event
+// @Produce json
+// @Param id path int true "Event ID"
+// @Success 200 {object} response.Response
+// @Failure 400,401 {object} response.Response
+// @Router /api/v1/events/{id}/unregister [delete]
 func (h *RegistrationHandler) cancel(c *gin.Context) {
 	eventId, err := strconv.ParseInt(c.Param("id"), 10, 64)
 	if err != nil {
